--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.479.0",
+    "mongoose": "^8.12.1",
     "next": "15.2.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
